:sparkles: Add banner with swiper

--- a/src/app/banner/banner.component.html
+++ b/src/app/banner/banner.component.html
@@ -1,1 +1,5 @@
-<p>banner works!</p>
+<swiper [navigation]="true" class="mySwiper">
+  <ng-template swiperSlide *ngFor="let img of images; index as i">
+    <img [src]="img" alt="Imagen de banner {{ i }}" />
+  </ng-template>
+</swiper>
