:art: Add Material module

--- a/src/app/products/components/product/product.component.html
+++ b/src/app/products/components/product/product.component.html
@@ -2,4 +2,5 @@
 <img [src]="product.image" alt="" />
 <strong>{{ product.price | currency }}</strong>
 <p>{{ product.description | slice: 0:5 }}</p>
+<button mat-raised-button color="primary">Agregar al carrito</button>
 <a [routerLink]="['/products', product.id]">Ver detalle</a>
