--- a/src/app/products/components/product/product.component.html
+++ b/src/app/products/components/product/product.component.html
@@ -1,6 +1,18 @@
-<h3>{{ product.title | uppercase }}</h3>
-<img [src]="product.image" alt="" />
-<strong>{{ product.price | currency }}</strong>
-<p>{{ product.description | slice: 0:5 }}</p>
-<button mat-raised-button color="primary">Agregar al carrito</button>
-<a [routerLink]="['/products', product.id]">Ver detalle</a>
+<mat-card>
+  <mat-card-header>
+    <mat-card-title>{{ product.title | uppercase }}</mat-card-title>
+    <mat-card-subtitle>
+      {{ product.price | currency }}
+    </mat-card-subtitle>
+  </mat-card-header>
+  <div class="crop-image">
+    <img [src]="product.image" alt="" />
+  </div>
+  <mat-card-content>
+    <p>{{ product.description | slice: 0:5 }}</p>
+  </mat-card-content>
+  <mat-card-actions>
+    <button mat-raised-button color="primary">Agregar al carrito</button>
+    <a [routerLink]="['/products', product.id]">Ver detalle</a>
+  </mat-card-actions>
+</mat-card>
