--- a/src/app/products/components/product/product.component.scss
+++ b/src/app/products/components/product/product.component.scss
@@ -1,10 +1,18 @@
-:host {
+/*:host {
   margin: 2px;
   border: 1px solid black;
   border-radius: 5px;
   display: block;
 }
+*/
 
-img {
-  max-width: 100%;
+.crop-image {
+  display: flex;
+  width: 100%;
+  height: 300px;
+  img {
+    object-fit: contain;
+    object-position: center;
+    width: 100%;
+  }
 }
