:alien: Add API request in products section

--- a/src/app/product-detail/components/product-detail/product-detail.component.html
+++ b/src/app/product-detail/components/product-detail/product-detail.component.html
@@ -1,10 +1,10 @@
 <div>
-  <img [src]="product.image" alt="" />
+  <img [src]="product.thumbnail" alt="" />
 </div>
 <div>
   <ul>
     <li>Nombre: {{ product.title }}</li>
-    <li>Precio: {{ product.price | currency }}</li>
+    <li>Precio: {{ product.platform }}</li>
   </ul>
-  <p>{{ product.description }}</p>
+  <p>{{ product.short_description }}</p>
 </div>
