--- a/src/app/products/components/product/product.component.html
+++ b/src/app/products/components/product/product.component.html
@@ -2,14 +2,14 @@
   <mat-card-header>
     <mat-card-title>{{ product.title | uppercase }}</mat-card-title>
     <mat-card-subtitle>
-      {{ product.price | currency }}
+      {{ product.platform }}
     </mat-card-subtitle>
   </mat-card-header>
   <div class="crop-image">
-    <img [src]="product.image" alt="" />
+    <img [src]="product.thumbnail" alt="" />
   </div>
   <mat-card-content>
-    <p>{{ product.description | slice: 0:5 }}</p>
+    <p>{{ product.short_description }}</p>
   </mat-card-content>
   <mat-card-actions>
     <button mat-raised-button color="primary">Agregar al carrito</button>
