--- a/src/app/product-detail/components/product-detail/product-detail.component.html
+++ b/src/app/product-detail/components/product-detail/product-detail.component.html
@@ -1,10 +1,12 @@
-<div>
-  <img [src]="product.thumbnail" alt="" />
-</div>
-<div>
-  <ul>
-    <li>Nombre: {{ product.title }}</li>
-    <li>Precio: {{ product.platform }}</li>
-  </ul>
-  <p>{{ product.short_description }}</p>
+<div *ngIf="product">
+  <div>
+    <img [src]="product.thumbnail" alt="" />
+  </div>
+  <div>
+    <ul>
+      <li>Nombre: {{ product.title }}</li>
+      <li>Precio: {{ product.platform }}</li>
+    </ul>
+    <p>{{ product.short_description }}</p>
+  </div>
 </div>
